// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgendaRowTimeText Component Renders with custom props and matches previous snapshot:  1`] = `
<View>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#8E8E93",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
        },
        undefined,
      ]
    }
  >
    10:30 AM
  </Text>
</View>
`;

exports[`AgendaRowTimeText Component Renders with default props and matches previous snapshot:  1`] = `
<View>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#8E8E93",
          "fontFamily": "Inter-Regular",
          "fontSize": 18,
        },
        undefined,
      ]
    }
  >
    10:30 AM
  </Text>
</View>
`;
